# router/app.go
@@ -24,6 +24,7 @@ func Router() *gin.Engine {
 	//user
 	r.GET("/user-detail", service.GetUserDetail)
 	r.POST("/login", service.Login)
+	r.POST("/send-code", service.SendCode)
 
 	//submit
 	r.GET("/submit-list", service.GetSubmitList)
